// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should display an error state if it is a duplicate target field 1`] = `
<FormGroup
  autoFit={true}
  className="data-transformation-item-root error"
>
  <FormGroupItem>
    <FieldDropDown
      dataIMap={Immutable.Map {}}
      onFieldPreviewModal={[Function]}
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayIcon
      className="icon-root"
      symbol="faro-connection-error-ovals"
    />
  </FormGroupItem>
  <FormGroupItem>
    <FieldDropDown
      className="suggestion"
      dataIMap={
        Immutable.Map {
          "sourceName": undefined,
        }
      }
      disabled={true}
      footerButtonMessage="New Field"
      footerOnClick={[Function]}
      loading={true}
      name="undefined.1"
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      placeholder="Select Analytics Cloud Field"
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <span
      data-tooltip={true}
      title="Only one field per source can be mapped to the same Analytics Cloud field."
    >
      <ClayIcon
        className="icon-root help"
        symbol="exclamation-full"
      />
    </span>
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayButton
      className="button-root"
      data-tooltip={true}
      displayType="unstyled"
      onClick={[Function]}
      title="Remove Field"
    >
      <ClayIcon
        className="icon-root"
        symbol="times-circle"
      />
    </ClayButton>
  </FormGroupItem>
</FormGroup>
`;

exports[`Row should render 1`] = `
<FormGroup
  autoFit={true}
  className="data-transformation-item-root error"
>
  <FormGroupItem>
    <FieldDropDown
      dataIMap={Immutable.Map {}}
      onFieldPreviewModal={[Function]}
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayIcon
      className="icon-root"
      symbol="faro-connection-error-ovals"
    />
  </FormGroupItem>
  <FormGroupItem>
    <FieldDropDown
      className="suggestion"
      dataIMap={
        Immutable.Map {
          "sourceName": undefined,
        }
      }
      disabled={true}
      footerButtonMessage="New Field"
      footerOnClick={[Function]}
      loading={true}
      name="undefined.1"
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      placeholder="Select Analytics Cloud Field"
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <span
      data-tooltip={true}
      title="No fields matched. Please select a field from the dropdown or create a new one."
    >
      <ClayIcon
        className="icon-root help"
        symbol="exclamation-full"
      />
    </span>
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayButton
      className="button-root"
      data-tooltip={true}
      displayType="unstyled"
      onClick={[Function]}
      title="Remove Field"
    >
      <ClayIcon
        className="icon-root"
        symbol="times-circle"
      />
    </ClayButton>
  </FormGroupItem>
</FormGroup>
`;

exports[`Row should update when receiving a new field: should contain "baz" and "biz" 1`] = `
<FormGroup
  autoFit={true}
  className="data-transformation-item-root"
>
  <FormGroupItem>
    <FieldDropDown
      dataIMap={
        Immutable.Map {
          "name": "first_name",
        }
      }
      onFieldPreviewModal={[Function]}
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayIcon
      className="icon-root"
      symbol="faro-connection-success-ovals"
    />
  </FormGroupItem>
  <FormGroupItem>
    <FieldDropDown
      className="suggestion"
      dataIMap={
        Immutable.Map {
          "name": "baz",
          "value": "biz",
          "sourceName": "first_name",
        }
      }
      disabled={false}
      footerButtonMessage="New Field"
      footerOnClick={[Function]}
      loading={true}
      name="undefined.1"
      onSearchInput={[Function]}
      onSearchSelect={[Function]}
      placeholder="Select Analytics Cloud Field"
      searchInputValue=""
      searchItems={Array []}
    />
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <span
      data-tooltip={true}
      title="Best match selected. There are  other possible matches."
    >
      <ClayIcon
        className="icon-root help"
        symbol="info-circle"
      />
    </span>
  </FormGroupItem>
  <FormGroupItem
    className="add-on"
    shrink={true}
  >
    <ClayButton
      className="button-root"
      data-tooltip={true}
      displayType="unstyled"
      onClick={[Function]}
      title="Remove Field"
    >
      <ClayIcon
        className="icon-root"
        symbol="times-circle"
      />
    </ClayButton>
  </FormGroupItem>
</FormGroup>
`;
